Moved to new Contentful space

--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@
        */
 
       var client = contentful.createClient({
-        space: 'jqjhoo9yeffe',
-        accessToken: 'd2d2ae21926351b571e6406da458d6085929a9ce6118b92bd30c1040fe29feb0'
+        space: '7o6w0tojuamk',
+        accessToken: '53ad3a0c4575d14a4737ae6f2a5e42e521d5eed8a0860b5a488ffc135af5afa3'
       });
 
       /**
