--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
 
     <script class="wrapper" type="text/x-handlebars-template">
 
+      <!-- 1. Activities -->
       <section class="activity">
         <h3>Activities</h3>
         <ul class="list">
@@ -15,15 +16,19 @@
               <a href="#" onclick="toggleDetails('activity', {{ @key }})">
                 {{ name }}
               </a>
-              <ul class="details">
-                <li class="field"><strong>At home?</strong> {{ atHome }}</li>
-                <li class="field"><strong>Do we have to pay?</strong> {{ requiresPaying }}</li>
-              </ul>
+              <div class="details">
+                <ul>
+                  <li class="field"><strong>At home?</strong> {{ atHome }}</li>
+                  <li class="field"><strong>Do we have to pay?</strong> {{ requiresPaying }}</li>
+                </ul>
+                <a href="#" onclick="dismiss()" class="dismiss">×</a>
+              </div>
             </li>
           {{/each}}
         </ul>
     	</section>
 
+      <!-- 2. Trips -->
       <section class="trip">
         <h3>Trips</h3>
         <ul class="list">
@@ -32,15 +37,19 @@
               <a href="#" onclick="toggleDetails('trip', {{ @key }})">
                 {{ name }}
               </a>
-              <ul class="details">
-                <li class="field"><strong>Location</strong> {{ location }}</li>
-                <li class="field"><strong>isRelatedToWhichActivity</strong> (to-do)</li>
-              </ul>
+              <div class="details">
+                <ul>
+                  <li class="field"><strong>Location</strong> {{ location }}</li>
+                  <li class="field"><strong>isRelatedToWhichActivity</strong> (to-do)</li>
+                </ul>
+                <a href="#" onclick="dismiss()" class="dismiss">×</a>
+              </div>
             </li>
           {{/each}}
         </ul>
     	</section>
 
+      <!-- 3. Restaurants -->
       <section class="restaurant">
         <h3>Restaurants</h3>
         <ul class="list">
@@ -49,15 +58,19 @@
               <a href="#" onclick="toggleDetails('restaurant', {{ @key }})">
                 {{ name }}
               </a>
-              <ul class="details">
-                <li class="field"><strong>Been there yet?</strong> {{ beenThere }}</li>
-                <li class="field"><strong>type</strong> (to-do)</li>
-              </ul>
+              <div class="details">
+                <ul>
+                  <li class="field"><strong>Been there yet?</strong> {{ beenThere }}</li>
+                  <li class="field"><strong>type</strong> (to-do)</li>
+                </ul>
+                <a href="#" onclick="dismiss()" class="dismiss">×</a>
+              </div>
             </li>
           {{/each}}
         </ul>
     	</section>
 
+      <!-- 4. TV -->
       <section class="tv">
         <h3>TV</h3>
         <ul class="list">
@@ -66,10 +79,13 @@
               <a href="#" onclick="toggleDetails('tv', {{ @key }})">
                 {{ name }}
               </a>
-              <ul class="details">
-                <li class="field"><strong>Trailer</strong> {{ trailer }}</li>
-                <li class="field"><strong>Type</strong> {{ type }}</li>
-              </ul>
+              <div class="details">
+                <ul>
+                  <li class="field"><strong>Trailer</strong> {{ trailer }}</li>
+                  <li class="field"><strong>Type</strong> {{ type }}</li>
+                </ul>
+                <a href="#" onclick="dismiss()" class="dismiss">×</a>
+              </div>
             </li>
           {{/each}}
         </ul>
@@ -92,14 +108,15 @@
        */
 
       var toggleDetails = function(content_type, key) {
-        // Hide visible details
-        var allDetails = document.querySelectorAll('.details');
-        for (var element = 0; element < allDetails.length; element++) {
-            allDetails[element].style.opacity = 0;
-        }
+        if (document.querySelector('.visible')) dismiss();
+
         // Show respective details
         var respectiveDetails = '.' + content_type + ' .item[data-count="' + key +'"]' + ' .details';
-        document.querySelector(respectiveDetails).style.opacity = 1;
+        document.querySelector(respectiveDetails).className += ' visible';
+      };
+
+      var dismiss = function() {
+        document.querySelector('.visible').className = 'details';
       };
 
       /**
