Added meta data, optimised for mobile

--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,28 @@
 <!doctype html>
 <html>
   <head>
+    <meta charset="utf-8">
     <title>Otto</title>
+
+    <meta name="description" content="Otto">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="google-site-verification" content="" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title" content="Otto" />
+    <meta name="twitter:description" content="Otto" />
+    <meta name="twitter:image" content="http://lab.joao.pt/otto" />
+    <meta name="twitter:url" content="http://lab.joao.pt/otto" />
+
+    <!-- Open Graph -->
+    <meta property="og:site_name" content="Otto" />
+    <meta property="og:title" content="Otto" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="http://lab.joao.pt/otto" />
+    <meta property="og:image" content="http://lab.joao.pt/otto" />
+    <meta property="og:description" content="Otto" />
+
     <link rel="stylesheet" media="all" href="styles/main.css">
 
     <script class="template" type="text/x-handlebars-template">
@@ -97,7 +118,7 @@
         <option value="tv">TV</option>
       </select>
     </header>
-    
+
     <div class="template-area"></div>
 
     <script src="https://npmcdn.com/contentful@3.5.0/browser-dist/contentful.min.js"></script>
