--- a/src/index.html
+++ b/src/index.html
@@ -30,8 +30,8 @@
       <section class="activities">
         <ul class="list">
           {{#each activity}}
-            <li class="item" data-count="{{ @index }}">
-              <a href="#" onclick="toggleDetails('activity', {{ @key }})">
+            <li data-count="{{ @index }}">
+              <a href="#" class="item">
                 {{ name }}
               </a>
               <div class="details">
@@ -50,13 +50,13 @@
       <section class="trips">
         <ul class="list">
           {{#each trip}}
-            <li class="item" data-count="{{ @index }}">
-              <a href="#" onclick="toggleDetails('trip', {{ @key }})">
+            <li data-count="{{ @index }}">
+              <a href="#" class="item">
                 {{ name }}
+                <span class="detail">{{ location }}</span>
               </a>
               <div class="details">
                 <ul>
-                  <li class="field"><strong>Location</strong> {{ location }}</li>
                   <li class="field"><strong>isRelatedToWhichActivity</strong> (to-do)</li>
                 </ul>
                 <a href="#" onclick="dismiss()" class="dismiss">×</a>
@@ -70,8 +70,8 @@
       <section class="restaurants">
         <ul class="list">
           {{#each restaurant}}
-            <li class="item" data-count="{{ @index }}">
-              <a href="#" onclick="toggleDetails('restaurant', {{ @key }})">
+            <li data-count="{{ @index }}">
+              <a href="#" class="item">
                 {{ name }}
               </a>
               <div class="details">
@@ -90,14 +90,14 @@
       <section class="tv">
         <ul class="list">
           {{#each tv}}
-            <li class="item" data-count="{{ @index }}">
-              <a href="#" onclick="toggleDetails('tv', {{ @key }})">
+            <li data-count="{{ @index }}">
+              <a href="#" class="item">
                 {{ name }}
+                <span class="detail">{{ type }}</span>
               </a>
               <div class="details">
                 <ul>
                   <li class="field"><strong>Trailer</strong> {{ trailer }}</li>
-                  <li class="field"><strong>Type</strong> {{ type }}</li>
                 </ul>
                 <a href="#" onclick="dismiss()" class="dismiss">×</a>
               </div>
@@ -126,6 +126,7 @@
     <script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script>
 
     <script>
+
       /**
        * Hook up to Contentful
        */
@@ -145,7 +146,7 @@
         entries.items.map(function (entry) {
           var item = entry.fields;
           var content_type = entry.sys.contentType.sys.id;
-          // Pop content type arrays, then push new item
+
           if (!collection[content_type]) collection[content_type] = [];
           collection[content_type].push(item);
         });
@@ -170,7 +171,7 @@
       });
 
       /**
-       * Get data, then lay it on the screen with Handlebars
+       * Get data, then compile with Handlebars
        */
 
       window.onload = function() {
@@ -179,10 +180,10 @@
             build(entries);
           }
         ).then(function() {
-          var source = document.querySelector('.template').innerHTML;
+          var source = $('.template').html();
           var template = Handlebars.compile(source);
           var html = template(collection);
-          // console.log(collection);
+          console.log(collection);
           $('.template-area').html(html).show();
           switchType('activities');
         });
